Bug 293295 - entries dragged on empty playlist don't show up
Summary: entries dragged on empty playlist don't show up
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (other bugs)
Version First Reported In: 2.5.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-04 14:18 UTC by Marius
Modified: 2012-02-13 23:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marius 2012-02-04 14:18:24 UTC
Version:           2.5.0 (using KDE 4.8.0) 
OS:                Linux

If you drag an entry from the Playlist onto a Saved Playlist, it does not always show up.

Reproducible: Always

Steps to Reproduce:
Create a new empty playlist in the Saved Playlists view (via rightclick), and drag several songs from the main Playlist onto the new playlist, one after another.

Actual Results:  
Not all dropped songs show up in the Saved Playlist view, and no "expandable indicator" icon appears left of the playlist. If you however add the saved playlist to the main playlist (via rightclick->add to playlist), all songs appear.

Expected Results:  
All songs are correctly shown in the saved playlists view.
Comment 1 Matěj Laitl 2012-02-13 23:49:30 UTC
Git commit 0b979bb9c0daf3a0832d966efbc1993d777fdcec by Matěj Laitl.
Committed on 14/02/2012 at 00:44.
Pushed by laitl into branch 'master'.

Always use nonnegative position in Playlist::notifyObserversTrackAdded()

This was the cause of bug 293295. Thanks to Marius for spotting and
reporting it.

BUGFIXES:
 * Don't misbehave when track is dropped directly to saved playlist.
FIXED-IN: 2.6

M  +1    -0    ChangeLog
M  +1    -1    src/browsers/playlistbrowser/PlaylistBrowserModel.cpp
M  +11   -0    src/core/playlists/Playlist.h
M  +5    -2    src/playlistmanager/sql/SqlPlaylist.cpp

http://commits.kde.org/amarok/0b979bb9c0daf3a0832d966efbc1993d777fdcec