Always use nonnegative position in Playlist::notifyObserversTrackAdded()

This was the cause of bug 293295. Thanks to Marius for spotting and
reporting it.

BUGFIXES:
 * Don't misbehave when track is dropped directly to saved playlist.

BUG: 293295
FIXED-IN: 2.6